--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="header-nav">
           <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
           <ul class="navigation">
-            <li><a class="nav-link" href="./index.html">Studio</a></li>
+            <li><a class="nav-link current" href="./index.html">Studio</a></li>
             <li><a class="nav-link" href="">Portfolio</a></li>
             <li><a class="nav-link" href="">Contacts</a></li>
           </ul>
@@ -62,6 +62,11 @@
           <h2 class="heading-first">Content</h2>
           <ul class="content-list">
             <li class="content-list-item">
+              <div class="list-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="content-list-heading">Strategy</h3>
               <p class="content-list-paragraf">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +75,11 @@
             </li>
 
             <li class="content-list-item">
+              <div class="list-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="content-list-heading">Punctuality</h3>
               <p class="content-list-paragraf">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +88,11 @@
             </li>
 
             <li class="content-list-item">
+              <div class="list-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="content-list-heading">Diligence</h3>
               <p class="content-list-paragraf">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +101,11 @@
             </li>
 
             <li class="content-list-item">
+              <div class="list-item-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="content-list-heading">Technologies</h3>
               <p class="content-list-paragraf">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,6 +131,49 @@
               <div class="team-nfo">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-job">Product Designer</p>
+                <ul class="social-links-our-team">
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://twitter.com/?lang=en"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.linkedin.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -124,6 +187,49 @@
               <div class="team-nfo">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-job">Frontend Developer</p>
+                <ul class="social-links-our-team">
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://twitter.com/?lang=en"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.linkedin.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -137,6 +243,49 @@
               <div class="team-nfo">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-job">Marketing</p>
+                <ul class="social-links-our-team">
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://twitter.com/?lang=en"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.linkedin.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -150,6 +299,49 @@
               <div class="team-nfo">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-job">UI Designer</p>
+                <ul class="social-links-our-team">
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.instagram.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://twitter.com/?lang=en"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.facebook.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-links-our-team-item">
+                    <a
+                      class="social-links-our-team-item-href"
+                      href="https://www.linkedin.com/"
+                    >
+                      <svg width="16" , height="16" class="icon-item-our-team">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -161,72 +353,119 @@
           <h2 class="our-portfolio-heading">Our Portfolio</h2>
           <ul class="our-portfolio-ul">
             <li class="our-portfolio-li">
-              <img
-                src="./images/our-portfolio/img-1.jpg"
-                alt="Bank App"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-imgdiv">
+                <img
+                  src="./images/our-portfolio/img-1.jpg"
+                  alt="Bank App"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-imgdiv-paragraf">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="our-portfolio-text-container">
                 <h3 class="list-item-heading">Banking App</h3>
                 <p class="list-item-paragraf">App</p>
               </div>
             </li>
             <li class="our-portfolio-li">
-              <img
-                src="./images/our-portfolio/img-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-imgdiv">
+                <img
+                  src="./images/our-portfolio/img-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-imgdiv-paragraf">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="our-portfolio-text-container">
                 <h3 class="list-item-heading">Cashless Payment</h3>
                 <p class="list-item-paragraf">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-li">
-              <img
-                src="./images/our-portfolio/img-3.jpg"
-                alt="Laptop"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-imgdiv">
+                <img
+                  src="./images/our-portfolio/img-3.jpg"
+                  alt="Laptop"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-imgdiv-paragraf">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="our-portfolio-text-container">
                 <h3 class="list-item-heading">Meditation App</h3>
                 <p class="list-item-paragraf">App</p>
               </div>
             </li>
             <li class="our-portfolio-li">
-              <img
-                src="./images/our-portfolio/img-4.jpg"
-                alt="Taxi"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-imgdiv">
+                <img
+                  src="./images/our-portfolio/img-4.jpg"
+                  alt="Taxi"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-imgdiv-paragraf">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="our-portfolio-text-container">
                 <h3 class="list-item-heading">Taxi Service</h3>
                 <p class="list-item-paragraf">Marketing</p>
               </div>
             </li>
             <li class="our-portfolio-li">
-              <img
-                src="./images/our-portfolio/img-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-imgdiv">
+                <img
+                  src="./images/our-portfolio/img-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-imgdiv-paragraf">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="our-portfolio-text-container">
                 <h3 class="list-item-heading">Screen Illustrations</h3>
                 <p class="list-item-paragraf">Design</p>
               </div>
             </li>
             <li class="our-portfolio-li">
-              <img
-                src="./images/our-portfolio/img-6.jpg"
-                alt="Woman"
-                width="360"
-                height="300"
-              />
+              <div class="our-portfolio-imgdiv">
+                <img
+                  src="./images/our-portfolio/img-6.jpg"
+                  alt="Woman"
+                  width="360"
+                  height="300"
+                />
+                <p class="our-portfolio-imgdiv-paragraf">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="our-portfolio-text-container">
                 <h3 class="list-item-heading">Online Courses</h3>
                 <p class="list-item-paragraf">Marketing</p>
@@ -238,7 +477,7 @@
     </main>
 
     <footer class="page-footer-title">
-      <div class="container">
+      <div class="container footer-titlediv">
         <a class="logo-footer" href="/"
           >Web<span class="logo-part-footer">Studio</span></a
         >
@@ -246,6 +485,47 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <div class="container-footer-social-media">
+          <p class="footer-paragraf-social-media">Social Media</p>
+          <ul class="footer-social-media-links-item">
+            <li class="footer-social-media-links-list-item">
+              <a  class="social-media-links-footer" 
+                href="https://www.instagram.com/">
+              <svg width="24" , height="24">
+              <use href="./images/icons.svg#icon-instagram-2">
+              </use>
+            </svg>
+          </a>
+        </li>
+            <li class="footer-social-media-links-list-item">
+              <a href="https://twitter.com/?lang=en" 
+              class="social-media-links-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1">
+                </use>
+              </svg>
+            </a>
+          </li>
+            <li class="footer-social-media-links-list-item">
+              <a href="https://www.facebook.com/" 
+              class="social-media-links-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1">
+                </use>
+              </svg>
+            </a>
+            </li>
+            <li class="footer-social-media-links-list-item">
+              <a href="https://www.linkedin.com/"
+               class="social-media-links-footer">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1">
+                </use>
+              </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
