--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
 
     
     <footer class="page-footer-title">
+      <div class="container-footer">
        <div class="footer-titlediv">
         <a class="logo-footer" href="/"
           >Web<span class="logo-part-footer">Studio</span></a
@@ -530,7 +531,7 @@
             </li>
           </ul>
         </div>
-      
+      </div>
     </footer>
   
   </body>
