change-header-list

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <nav class="header-nav">
           <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
           <ul class="navigation">
-            <li><a class="nav-link current" href="./index.html">Studio</a></li>
-            <li><a class="nav-link" href="">Portfolio</a></li>
-            <li><a class="nav-link" href="">Contacts</a></li>
+            <li class="nav-link-item-list"><a class="nav-link current" href="./index.html">Studio</a></li>
+            <li class="nav-link-item-list"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-link-item-list"><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
 
