change-header-footer

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         <nav class="header-nav">
           <a class="logo" href="/">Web<span class="logo-part">Studio</span></a>
           <ul class="navigation">
-            <li class="nav-link-item-list"><a class="nav-link current" href="./index.html">Studio</a></li>
-            <li class="nav-link-item-list"><a class="nav-link" href="">Portfolio</a></li>
-            <li class="nav-link-item-list"><a class="nav-link" href="">Contacts</a></li>
+            <li ><a class="nav-link current" href="./index.html">Studio</a></li>
+            <li ><a class="nav-link" href="">Portfolio</a></li>
+            <li ><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
 
         <address class="address">
           <ul class="adress-uli">
-            <li>
+            <li class="nav-link-item-list">
               <a class="address-link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               ><br />
             </li>
-            <li>
+            <li class="nav-link-item-list">
               <a class="address-link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -491,12 +491,12 @@
         </p>
       </div>
         <div class="container-footer-social-media">
-          <p class="footer-paragraf-social-media">Social Media</p>
+          <p class="footer-paragraf-social-media">Social media</p>
           <ul class="footer-social-media-links-item">
             <li class="footer-social-media-links-list-item">
               <a  class="social-media-links-footer" 
                 href="https://www.instagram.com/">
-              <svg width="24"  height="24">
+              <svg class="svg-footer-icon" width="24"  height="24">
               <use href="./images/icons.svg#icon-instagram-2">
               </use>
             </svg>
@@ -505,7 +505,7 @@
             <li class="footer-social-media-links-list-item">
               <a href="https://twitter.com/?lang=en" 
               class="social-media-links-footer">
-              <svg width="24" height="24">
+              <svg class="svg-footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter-1">
                 </use>
               </svg>
@@ -514,7 +514,7 @@
             <li class="footer-social-media-links-list-item">
               <a href="https://www.facebook.com/" 
               class="social-media-links-footer">
-              <svg width="24" height="24">
+              <svg class="svg-footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook-1">
                 </use>
               </svg>
@@ -523,7 +523,7 @@
             <li class="footer-social-media-links-list-item">
               <a href="https://www.linkedin.com/"
                class="social-media-links-footer">
-              <svg width="24" height="24">
+              <svg class="svg-footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin-1">
                 </use>
               </svg>
