--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 
     
     <footer class="page-footer-title">
-      <div class="container-footer">
+      <div class="container-footer container">
        <div class="footer-titlediv">
         <a class="logo-footer" href="/"
           >Web<span class="logo-part-footer">Studio</span></a
